sampler/chain/projects/conductor/selected.txt
/home/nima/Developer/AutoFixer/Evaluation/Projects/conductor/core/src/main/java/com/netflix/conductor/core/execution/WorkflowExecutor.java:1038: error: [NullAway] (INDEX= 30) (Covered) returning @Nullable expression from method with @NonNull return type
        return Optional.ofNullable(executionDAOFacade.getTaskById(taskId))
        ^
	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/conductor/core/src/main/java/com/netflix/conductor/service/ExecutionService.java:109: error: [NullAway] (INDEX= 98) (Covered) passing @Nullable parameter 'null' where @NonNull is required
        String queueName = QueueUtils.getQueueName(taskType, domain, null, null);
                                                                     ^
	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/conductor/core/src/main/java/com/netflix/conductor/service/WorkflowServiceImpl.java:119: error: [NullAway] (INDEX= 124) (Covered) passing @Nullable parameter 'null' where @NonNull is required
                null,
                ^
	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/conductor/core/src/main/java/com/netflix/conductor/core/events/DefaultEventProcessor.java:218: error: [NullAway] (INDEX= 117) (Covered) passing @Nullable parameter 'null' where @NonNull is required
                this::isTransientException, null, RETRY_COUNT, description, methodName);
                                            ^
	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/conductor/core/src/main/java/com/netflix/conductor/core/execution/WorkflowExecutor.java:1508: error: [NullAway] (INDEX= 31) (Covered) returning @Nullable expression from method with @NonNull return type
            return null;
            ^
	(see http://t.uber.com/nullaway )
